# mlir-workshop

./: .gitignore  Cargo.toml  Makefile  README.md  env.sh  test.prog
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  about.md  end.md  lang_1.md  mlir_basics.md  workshop_p1.md  workshop_p10.md  workshop_p2.md  workshop_p3.md  workshop_p4.md  workshop_p5.md  workshop_p6.md  workshop_p7.md  workshop_p8.md  workshop_p9.md
src/: ast.rs  codegen.rs  grammar.lalrpop  main.rs  util.rs
src/codegen/: expressions.rs  ifelse_stmt.rs  let_stmt.rs  return_stmt.rs  while_stmt.rs
test/: add.prog  call.prog  constant.prog  div.prog  factorial.prog  ifelse.prog  mul.prog  sub.prog  while.prog
