[package]
name = "mlir-workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
logos = "0.15.0"
melior = { version = "0.20.0", features = ["ods-dialects", "helpers"] }
mlir-sys = "0.4.1"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
ariadne = { version = "0.5.0", features = ["auto-color"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
llvm-sys = "191.0.0"

[build-dependencies]
lalrpop = "0.22.0"
